docs(readme): Add `README.md` for `cargo_derive_more` (#6)

--- a/serde_more_derive/Cargo.toml
+++ b/serde_more_derive/Cargo.toml
@@ -3,6 +3,7 @@ name = "serde_more_derive"
 description = "Derive macro for serde_more"
 categories = ["encoding"]
 keywords = ["serde", "serialization"]
+readme = "README.md"
 version.workspace = true
 authors.workspace = true
 license.workspace = true
